@@ -2,6 +2,7 @@ Version SVN trunk (?)
 
   * general changes:
     - fixed printf type errors (mostly in debug messages)
+    - use unique_ptr instead of auto_ptr when building with C++11
 
 Version 2.0.0 (15 July 2015)
 
